--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,18 @@
 <!doctype html>
 <html lang="kr">
   <head>
+    <meta property="og:title" content="잡생각 - 나에게 맞는 직업 찾기" />
+    <meta
+      property="og:description"
+      content="당신의 성향에 맞는 직업을 분석하고, 채용 정보까지 연결해드립니다."
+    />
+    <meta property="og:image" content="/images/og-image.PNG" />
+    <meta property="og:url" content="https://job-thoughts-client.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="잡생각 - 나에게 맞는 직업 찾기" />
+    <meta name="twitter:description" content="성향 기반 직무 추천 + 채용 연동 서비스" />
+    <meta name="twitter:image" content="/images/og-image.PNG" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/jobThoughts.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
